[tool.poetry]
name = "kga2c"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "kga2c" }]

[tool.poetry.dependencies]
python = "^3.9"
torch = [
    { file = "../torch-dist/torch-1.11.0+cu113-cp39-cp39-linux_x86_64.whl", markers = "sys_platform == 'linux'" },
    { url = "https://download.pytorch.org/whl/cu113/torch-1.12.1%2Bcu113-cp39-cp39-win_amd64.whl", markers = "sys_platform == 'win32'" },
    { version = "^1.12.1", markers = "sys_platform == 'darwin'" },
]
jericho = "^3.1.0"
black = "^22.10.0"
numpy = "^1.23.4"
ipykernel = "^6.16.2"
redis = "^4.3.4"
sentencepiece = "^0.1.97"
statistics = "^1.0.3.5"
networkx = "^2.8.7"
spacy = "^3.4.2"
fuzzywuzzy = "^0.18.0"
requests = "^2.28.1"
diskcache = "^5.4.0"
stanza = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
