[tool.poetry]
name = "kga2c"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "kga2c" }]

[tool.poetry.dependencies]
python = "^3.7"
jericho = "2.4.2"
black = "^22.10.0"
ipykernel = "^6.16.2"
redis = "^4.3.4"
sentencepiece = "^0.1.97"
statistics = "^1.0.3.5"

spacy = "2.3"
fuzzywuzzy = "^0.18.0"
diskcache = "^5.4.0"
stanza = "^1.4.2"
tensorboard = "^2.10.1"
multiprocess = "^0.70.14"
transformers = { version = "^4.24.0" }
networkx = "2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
